--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,7 +14,7 @@
 .line {
   width: 100vw;
   height: 4px;
-  background-color: black;
+  background-color: fuchsia;
   border: none;
   margin: 0;
 }
