--- a/src/component/SearchBar/SearchBar.module.css
+++ b/src/component/SearchBar/SearchBar.module.css
@@ -12,3 +12,19 @@
   border: 1px solid blue;
   border-radius: 6px;
 }
+.button {
+  display: block;
+  text-align: center;
+  padding: 0.5rem 1.5rem;
+  margin-bottom: 0.3rem;
+  background-color: #2563eb;
+  color: #ffffff;
+  border-radius: 0.5rem;
+  width: 6rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: darkblue;
+}
