--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -5,3 +5,19 @@
   border: none;
   margin: 0;
 }
+.button {
+  display: block;
+  text-align: center;
+  padding: 0.5rem 1.5rem;
+  margin-bottom: 0.3rem;
+  background-color: #2563eb;
+  color: #ffffff;
+  border-radius: 0.5rem;
+  width: 6rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: darkblue;
+}
